# pyThreatCode

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml  test.yml
docs/: conf.py
threatcode/: collection.py  conditions.py  exceptions.py  modifiers.py  plugins.py  rule.py  types.py  validation.py
threatcode/backends/test/: backend.py
threatcode/conversion/: base.py  deferred.py  state.py
threatcode/pipelines/: base.py  common.py
threatcode/pipelines/test/: pipeline.py
threatcode/processing/: conditions.py  finalization.py  pipeline.py  postprocessing.py  resolver.py  tracking.py  transformations.py
threatcode/validators/: base.py
threatcode/validators/core/: __init__.py  condition.py  logsources.py  metadata.py  modifiers.py  tags.py  values.py
tools/: update-mitre_attack.py
