[tool.poetry]
name = "pyThreatCode"
version = "0.10.9"
license = "LGPL-2.1-only"
description = "ThreatCode rule processing and conversion tools"
authors = ["Md Sulaiman <infosulaiman@icloud.com>"]
readme = "README.md"
repository = "https://github.com/ThreatCode/pyThreatCode"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security"
]
packages = [
    { include = "threatcode" }
]

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^23.2"
pyparsing = "^3.0.7"
pyyaml = "^6.0"
requests = "^2.28.1"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^0.931"
pre-commit = "^3.3.3"
pylint = "^3.0.2"
pytest = "^6.2.2"
pytest-cov = "^4.1.0"
pytest-mypy = "^0.10.3"
Sphinx = "^4.2.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
